// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb demo -- backbutton 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #6b798e;
  border-color: #c3cad9;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
  padding-left: 7px;
  padding-right: 7px;
}

.c2:hover {
  background: #fff;
  color: #3555f6;
  border-color: #3555f6;
}

.c1 {
  margin-right: 16px;
  padding: 0 5px;
}

.c5 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.c7 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c9 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c9,
.c9:hover,
.c9:visited,
.c9:link,
.c9:active {
  color: #6b798e;
}

.c6 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c0 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c0:hover .c8,
.c0:hover .c4,
.c0:hover .c8:hover,
.c0:hover .c4:hover,
.c0:hover .c8:visited,
.c0:hover .c4:visited,
.c0:hover .c8:link,
.c0:hover .c4:link,
.c0:hover .c8:active,
.c0:hover .c4:active {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <button
        class="c1 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c2"
        type="left"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__left c3"
          type="left"
        />
      </button>
      <span
        class="c4 c5"
      >
        <i
          class="uc-fe-icon icon__home c3"
          type="home"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        <i
          class="uc-fe-icon icon__uhost c3"
          type="uhost"
        />
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <a
        class="c8 c9"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c7"
      >
        reload
      </span>
      <span
        class="c6"
      >
        /
      </span>
      <span
        class="c4 c10"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- breadcrumb 1`] = `
.c12 {
  vertical-align: baseline;
}

.c11 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #6b798e;
  border-color: #c3cad9;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
  padding-left: 7px;
  padding-right: 7px;
}

.c11:hover {
  background: #fff;
  color: #3555f6;
  border-color: #3555f6;
}

.c10 {
  margin-right: 16px;
  padding: 0 5px;
}

.c14 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #6b798e !important;
  cursor: default;
}

.c16 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c19 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c18 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c18,
.c18:hover,
.c18:visited,
.c18:link,
.c18:active {
  color: #6b798e;
}

.c15 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c9 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c9:hover .c17,
.c9:hover .c13,
.c9:hover .c17:hover,
.c9:hover .c13:hover,
.c9:hover .c17:visited,
.c9:hover .c13:visited,
.c9:hover .c17:link,
.c9:hover .c13:link,
.c9:hover .c17:active,
.c9:hover .c13:active {
  color: #3555f6;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c8 {
  display: table;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c7 input,
.c7 input:hover,
.c7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c7:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c7 input {
  line-height: 26px;
  height: 26px;
}

.c7 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 input::-moz-placeholder {
  color: #abb4c3;
}

.c7 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 input::placeholder {
  color: #abb4c3;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        separator
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c7"
        >
          <span
            class="c8"
          >
            <input
              value="/"
            />
          </span>
        </span>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c9"
    >
      <button
        class="c10 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c11"
        type="left"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__left c12"
          type="left"
        />
      </button>
      <span
        class="c13 c14"
      >
        <i
          class="uc-fe-icon icon__home c12"
          type="home"
        />
      </span>
      <span
        class="c15"
      >
        /
      </span>
      <span
        class="c13 c16"
      >
        <i
          class="uc-fe-icon icon__uhost c12"
          type="uhost"
        />
      </span>
      <span
        class="c15"
      >
        /
      </span>
      <a
        class="c17 c18"
        href="https://www.google.com"
        target="_blank"
      >
        google
      </a>
      <span
        class="c15"
      >
        /
      </span>
      <span
        class="c13 c16"
      >
        reload
      </span>
      <span
        class="c15"
      >
        /
      </span>
      <span
        class="c13 c19"
      >
        current
      </span>
    </div>
  </div>
</div>
`;

exports[`Breadcrumb demo -- item 1`] = `
.c20 {
  vertical-align: baseline;
}

.c19 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #6b798e;
  border-color: #c3cad9;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
  padding-left: 7px;
  padding-right: 7px;
}

.c19:hover {
  background: #fff;
  color: #3555f6;
  border-color: #3555f6;
}

.c18 {
  margin-right: 16px;
  padding: 0 5px;
}

.c22 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
}

.c24 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #0a1633 !important;
  font-weight: bold;
}

.c23 {
  font-size: 14px;
  margin-right: 6px;
  display: inline-block;
  vertical-align: middle;
  font-weight: bold;
  cursor: default;
}

.c17 {
  font-size: 12px;
  color: #6b798e;
  vertical-align: baseline;
}

.c17:hover .c25,
.c17:hover .c21,
.c17:hover .c25:hover,
.c17:hover .c21:hover,
.c17:hover .c25:visited,
.c17:hover .c21:visited,
.c17:hover .c25:link,
.c17:hover .c21:link,
.c17:hover .c25:active,
.c17:hover .c21:active {
  color: #3555f6;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3555f6;
}

.c7 .c13 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        current
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        noAction
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c17"
    >
      <button
        class="c18 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border-gray c19"
        type="left"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__left c20"
          type="left"
        />
      </button>
      <span
        class="c21 c22"
      >
        <i
          class="uc-fe-icon icon__home c20"
          type="home"
        />
      </span>
      <span
        class="c23"
      >
        /
      </span>
      <span
        class="c21 c22"
      >
        <i
          class="uc-fe-icon icon__uhost c20"
          type="uhost"
        />
      </span>
      <span
        class="c23"
      >
        /
      </span>
      <span
        class="c21 c22"
      >
        custom
      </span>
      <span
        class="c23"
      >
        /
      </span>
      <span
        class="c21 c24"
      >
        current
      </span>
    </div>
  </div>
</div>
`;
